# librmn_interface

./: .gitignore  Makefile  aidoc.md  test_fst24  test_fst24.c
fst24_python/: CMakeLists.txt  README.md  composer_instructions.md  instructions.md  project.toml
fst24_python/context/: TECHNICAL.md  dependencies.md  design_decisions.md  existing_code.md  external_references.md  librmn_api.md  metadata_handling.md  types.py
fst24_python/prompts/: 00_implementation_order.md  01_core.md  01_core_interface.md  01a_core_file.md  01a_type_definitions.md  01b_core_implementation.md  01c_query_implementation.md  01d_record_implementation.md  02_metadata.md  02_metadata_handler.md  02_metadata_handler_implementation.md  03_data_access.md  03_data_access_implementation.md  03b_grid_operations.md  04_integration.md  05_polars.md  requirements.md
fst24_python/src/fst24/: types.py
